# backend/swagger/swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "version": "1.0.0",
     "title": "Anime API",
-    "description": "REST API for Animes"
+    "description": "REST API for Managing a list of Animes And Mangas"
   },
   "host": "localhost:3000",
   "basePath": "/api/v1",
@@ -15,6 +15,10 @@
     {
       "name": "Animes",
       "description": "API for animes in the system"
+    },
+    {
+      "name": "Users",
+      "description": "API for users in the system"
     }
   ],
   "schemes": ["http"],
@@ -270,9 +274,242 @@
           "500": { "description": "Error updating Anime" }
         }
       }
+    },
+    "/auth/register": {
+      "post": {
+        "tags": ["Users"],
+        "description": "Create new user in system",
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "description": "User we want to create",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "201": {
+            "description": "New User is created",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "400": {
+            "description": "No User given"
+          },
+          "409": { "description": "Conflict" },
+          "500": {
+            "description": "Error Saving User"
+          }
+        }
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Generate an authentication token",
+        "description": "",
+        "operationId": "loginUser",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Login Object Created",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Login"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "string"
+            }
+          },
+          "404": {
+            "description": "Invalid password or username/email"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Removes the authentication token",
+        "description": "",
+        "operationId": "logoutUser",
+        "responses": {
+          "200": {
+            "description": "Logged out",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "/u/users": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get all users in the system",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "default": 1,
+            "description": "Page number for pagination"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "default": 10,
+            "description": "Number of items per page"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Users"
+            }
+          },
+          "500": { "description": "Error Finding Users" }
+        },
+        "security": [
+          {
+            "user_jwt_auth": []
+          }
+        ]
+      }
+    },
+    "/u/user": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get user with given ID",
+        "responses": {
+          "200": {
+            "description": "User is found",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "404": { "description": "User not Found" },
+          "400": { "description": "No User given" },
+          "500": { "description": "Error Finding User" }
+        },
+        "security": [
+          {
+            "user_jwt_auth": []
+          }
+        ]
+      },
+      "delete": {
+        "summary": "Delete User with given ID",
+        "tags": ["Users"],
+        "responses": {
+          "204": {
+            "description": "User is deleted"
+          },
+          "404": { "description": "User not Found" },
+          "400": { "description": "No User given" },
+          "500": { "description": "Error deleting User" }
+        },
+        "security": [
+          {
+            "user_jwt_auth": []
+          }
+        ]
+      },
+      "put": {
+        "summary": "Update User with given ID",
+        "tags": ["Users"],
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "description": "User with new values of properties",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User is updated",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "404": { "description": "User not Found" },
+          "400": { "description": "No User or Id given" },
+          "409": { "description": "Conflict" },
+          "500": { "description": "Error updating User" }
+        },
+        "security": [
+          {
+            "user_jwt_auth": []
+          }
+        ]
+      }
+    }
+  },
+  "securityDefinitions": {
+    "user_jwt_auth": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "x-access-token"
     }
   },
   "definitions": {
+    "Login": {
+      "required": ["password"],
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "User": {
+      "required": ["username", "email", "password"],
+      "properties": {
+        "username": { "type": "string" },
+        "email": { "type": "string" },
+        "password": { "type": "string" },
+        "favouriteManga": {
+          "type": "array",
+          "items": {
+            "id": { "$oid": { "type": "string" } },
+            "watchStatus": { "type": "string", "default": "To Watch" },
+            "currentChapter": { "type": "number", "default": 0 }
+          }
+        }
+      }
+    },
+    "Users": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/User"
+      }
+    },
     "Manga": {
       "required": ["title"],
       "properties": {
